--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -70,7 +70,8 @@ body:not(.logged-in) .custom__header {
   padding: 64px 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 120px;
   display: none;
 }
 
