--- a/style.css
+++ b/style.css
@@ -1044,6 +1044,7 @@ textarea {
 .default__pages_section {
   padding: 0 20px;
   height: 100vh;
+  overflow: hidden;
 }
 
 .default__pages_section img {
