--- a/style.css
+++ b/style.css
@@ -755,6 +755,9 @@ textarea {
 .product__page_nav {
   background-color: #e2e2e2;
   padding: 1rem 0;
+  position: sticky;
+  top: 80px;
+  z-index: 3;
 }
 
 .product__page_title {
@@ -765,16 +768,21 @@ textarea {
 
 .product__page_nav_wrapper {
   display: flex;
-  gap: 12px;
+  gap: 24px;
   justify-content: space-between;
   align-items: center;
 }
 
 .product__page_nav_wrapper a {
   font-size: 1.6rem;
-  font-weight: 300;
+  font-weight: 400;
   color: var(--primary_color);
   text-decoration: none;
+  border-bottom: 3px solid #e2e2e2;
+}
+
+.product__page_nav_wrapper a.btn-menu-active {
+  border-bottom: 3px solid;
 }
 
 .product__img_carousel {
