--- a/style.css
+++ b/style.css
@@ -574,6 +574,16 @@ textarea {
   font-weight: bold;
 }
 
+.stores__card_whatsapp i {
+  font-size: 2.5rem;
+  margin-top: 5px;
+  transition: 0.5s;
+}
+
+.stores__card_whatsapp i:hover {
+  opacity: 0.5;
+}
+
 .essence__stores_card {
   background-color: white;
   padding: 60px;
