--- a/components/custom-header/styles.css
+++ b/components/custom-header/styles.css
@@ -176,7 +176,7 @@ body:not(.logged-in) .custom__header {
   }
 
   .header__submenu {
-    gap: 12px;
+    gap: 0;
   }
 
   .header__submenu_item {
@@ -214,5 +214,10 @@ body:not(.logged-in) .custom__header {
     justify-content: flex-start;
     height: 100vh;
     overflow-y: scroll;
+  }
+
+  .header__main_menu a,
+  .header__submenu_title {
+    font-size: 1.6rem;
   }
 }
