--- a/style.css
+++ b/style.css
@@ -1116,18 +1116,17 @@ textarea {
 /*DEFAULT PAGES TEMPLATE*/
 .default__pages_section {
   padding: 0 20px;
-  height: 100vh;
   overflow: hidden;
 }
 
 .default__pages_section img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .default__pages_section_content {
-  padding: 160px;
+  padding: 40px;
 }
 
 .default__pages_section_content h2 {
@@ -1136,7 +1135,7 @@ textarea {
 }
 
 .default__pages_section_content p {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 300;
   padding: 40px 0;
 }
