--- a/style.css
+++ b/style.css
@@ -797,7 +797,7 @@ textarea {
   align-items: flex-start;
 }
 
-.product__page_header_img {
+#product__page_header_img {
   width: 100%;
   height: 100%;
   object-fit: cover;
