--- a/style.css
+++ b/style.css
@@ -400,7 +400,6 @@ a {
 /*FORMS*/
 input[type="text"],
 input[type="email"] {
-  height: 100%;
   font-family: Lato, arial;
   font-size: 0.1rem;
   font-weight: 400;
@@ -412,13 +411,18 @@ input[type="email"] {
 }
 
 select {
-  height: 100%;
   font-family: Lato, arial;
   font-weight: 400;
   color: var(--primary_color);
   border: 0 !important;
   border-bottom: 1px solid #8a817a !important;
   background: #fff !important;
+}
+
+#contato input[type="text"],
+#contato input[type="email"],
+#contato select {
+  height: 60px !important;
 }
 
 textarea {
@@ -434,8 +438,9 @@ textarea {
 
 #contato p {
   margin: 0 !important;
-  height: 100%;
   text-align: right;
+  height: 100%;
+  display: block;
 }
 
 #contato .wpcf7-submit {
@@ -1158,6 +1163,86 @@ textarea {
 .checkout-button:hover {
   opacity: 0.5;
 }
+
+/*POPUP START*/
+.custom__popup {
+  display: none;
+  align-items: center;
+  position: fixed;
+  width: 640px;
+  height: 640px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.custom__popup_close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.custom__popup_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.custom__popup_img {
+  height: 100%;
+  width: 80%;
+}
+
+.custom__popup_form_wrapper {
+  padding: 40px;
+  margin-left: -20px;
+}
+
+.custom__popup_form_wrapper h2 {
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.custom__popup_form_wrapper h3 {
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+.custom__popup_form_wrapper form {
+  margin-top: 12px;
+}
+
+.custom__popup_close {
+  background: none;
+  border: none;
+  color: white;
+  transition: 0.5s;
+}
+
+.custom__popup_close:hover {
+  color: var(--third_color);
+}
+
+@keyframes show__popup_animation {
+  from {
+    opacity: 0;
+    transform: translate(-50%, 20px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.show__popup {
+  display: flex !important;
+  animation: show__popup_animation 0.5s forwards;
+}
+/*POPUP END*/
 
 @media (max-width: 1440px) {
   .section__creator,
