--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ textarea {
 }
 
 .section__content_wrapper {
-  padding: 150px;
+  padding: 40px 150px;
   font-size: 2rem;
   font-weight: 300;
   display: flex;
