--- a/style.css
+++ b/style.css
@@ -1261,6 +1261,22 @@ textarea {
   width: 100%;
 }
 
+.woocommerce .select2-selection--single {
+  border: none !important;
+}
+
+.woocommerce .select2-selection__rendered {
+  font-family: Lato, arial;
+  font-weight: 400;
+  line-height: 2em;
+  color: var(--primary_color);
+  border: none !important;
+  border-bottom: 1px solid #8a817a !important;
+  background: #fff !important;
+  height: 40px !important;
+  overflow: hidden;
+}
+
 @media (max-width: 1440px) {
   .section__creator,
   .video__background_section {
